fix: add overflow to second section image

--- a/web/css/contact.css
+++ b/web/css/contact.css
@@ -62,6 +62,7 @@
 
 .second-section-image {
     display: flex;
+    overflow-x: hidden;
 }
 
 .box {
